--- a/2103_central/index.html
+++ b/2103_central/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html>
 
 <head>
@@ -48,7 +48,7 @@
         <section class="tm-section-head" id="top">
             <header id="header" class="text-center tm-text-gray">
                 <h1>CENTRAL</h1>
-                <p>NEW TEMPLATE FOR YOU</p>
+                <p>Welcome to Test New Template</p>
             </header>
 
             <nav class="navbar narbar-light">
